# TCM-26

./: README.md  a.out  docker-compose.prod.yml  docker-compose.yml  example.env
.github/workflows/: dash.yml  icanspi.yml  mqtt.yml  shelter.yml  vision.yml
assettocorsa/: can.py  main.py  reader.py
dash/: .gitignore  .prettierignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
dash/app/: layout.tsx  page.tsx
dash/components/: debug-fd-view.tsx  debug-view.tsx  ecu-state.tsx  info-card.tsx  left-panel.tsx  max-cell-temp.tsx  right-panel.tsx  speedometer.tsx  state-of-charge.tsx  telemetry-dashboard.tsx
docs/: dash.md
icanspi/: .gitignore  Dockerfile  Makefile  circularBuffer.c  edge-ex.c  icanspi.c  spi-ex.c
mock-can/: main  main.c  mock-can
monitor/: Dockerfile  go.mod  go.sum  main.go
mqtt/: Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
scripts/: gr26-dash-update.sh  init-db.sh  install-systemd.sh  release.sh  run-dash.sh
shelter/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
shelter/config/: config.py
shelter/database/: db.py
shelter/model/: message.py
shelter/service/: heartbeat.py  runner.py  state.py  upload.py
systemd/: gr26-dash-update.service  gr26-dash-update.timer  gr26-dash.service
tcm/: Dockerfile  go.mod  main.go
tcm2can/: .gitignore  .mxproject  CMakeLists.txt  STM32G474XX_FLASH.ld  bruh2.ioc
vision/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
vision/config/: config.py
vision/database/: db.py
vision/model/: segment.py
vision/service/: heartbeat.py  net.py  recorder.py  state.py  uploader.py
(+110 files in other folders)
