[project]
name = "shelter"
version = "1.6.0"
description = "On-car parquet uploader for TCM-26 (Epic Shelter)"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.41",
    "adbc-driver-postgresql>=1.0",
    "adbc-driver-manager>=1.0",
    "pyarrow>=17",
    "loguru>=0.7",
    "gr-ulid>=1.1",
    "boto3>=1.35",
]
