[project]
name = "vision"
version = "1.10.7"
description = "On-car camera recorder + S3 uploader for TCM-26 (ZED -> H.264 -> Epic Shelter)"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-postgresql>=1.0",
    "adbc-driver-manager>=1.0",
    "loguru>=0.7",
    "gr-ulid>=1.1",
    "boto3>=1.35",
]
